[gd_scene load_steps=3 format=3]
[ext_resource path="res://scripts/DefeatScreen.gd" type="Script" id=1]
[node name="DefeatScreen" type="Control"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 300.0
margin_top = 120.0
margin_right = 900.0
margin_bottom = 520.0

[node name="FinalScore" type="Label" parent="VBoxContainer"]
text = "Your Score: 0"
name = "FinalScore"

[node name="HighScore" type="Label" parent="VBoxContainer"]
text = "High Score: 0"
name = "HighScore"

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
text = "Player"

[node name="Restart" type="Button" parent="VBoxContainer"]
text = "Restart"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
text = "Main Menu"

[node name="Close" type="Button" parent="VBoxContainer"]
text = "Close"